fixed issues navbar and button alignment

--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -87,7 +87,7 @@ body {
 	background-size: contain;
 }
 #main-home-navbar {
-	position: relative;
+	/* position: relative; */
 }
 #main-home-navbar::after {
 	position: absolute;
